[gd_scene load_steps=18 format=2]

[ext_resource path="res://Objects/Cappy/Cappy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Mario/cappy.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Sprites/Cappy/CappyTurning/cappy8.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 8 )

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.554785, 1, 0.594604 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFXTurning:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 8 )

[sub_resource type="Animation" id=7]
resource_name = "New Anim"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BackArea/CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 3 ), SubResource( 5 ), SubResource( 3 ), SubResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFXTurning:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}

[node name="Cappy" type="KinematicBody2D"]
z_index = 100
z_as_relative = false
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="SFXTurning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 6.985
pitch_scale = 1.2
bus = "SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 3
playing = true

[node name="BackArea" type="Area2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackArea"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 4 )

[node name="AnimationPlayerTurning" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 7 )
[connection signal="jump" from="." to="." method="_on_Cappy_jump"]
[connection signal="body_entered" from="BackArea" to="." method="_on_BackArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
